-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.19, 6.8
-
None
-
Ubuntu 22.04
-
dc1d3abd7 (dev), f0758fb11 (6.8), 4b53b7d20 (tqtc/lts-6.5)
1. The problem scenario is that the right-click menu pops up when the mouse is right-clicked.
2. Click the right button of the mouse again. When the mouse position is at the edge, the list in the right-click menu is selected.
Note: In the scenario where the problem occurs, the mouse needs to be in the middle of the menu, not the top or bottom.
- relates to
-
QTBUG-99618 Expose XdgPositioner to QtBase
-
- Reported
-
-
QTBUG-134615 When the touch screen position and the menu item overlap, a second click-like situation occurs
-
- Reported
-
-
QTBUG-133302 ContextMenu opened on TextField sometimes closes immediately
-
- Closed
-
- resulted in
-
QTBUG-130832 [REG 6.8.0 -> dev] Windows System Tray Icon: Context menu's incorrect position
-
- Closed
-