tests/auto/widgets/widgets/qtoolbutton/tst_qtoolbutton.cpp
@@ -130,6 +130,11 @@ void tst_QToolButton::triggered()
 
     m_menu = menu.data();
 
+    // QMenu uses QGuiApplicationPrivate::lastCursorPosition to detect pointer
+    // movement. And GuiApplication needs at least one mouse move to properly
+    // initialize it. So we send a mouse move now, before we open the menu.
+    QTest::mouseMove(mainWidget.windowHandle(), mainWidget.mapFromGlobal(QPoint(0, 0)));
+
     QTimer *timer = new QTimer(this);
     timer->setInterval(50);
     connect(timer, SIGNAL(timeout()), this, SLOT(sendMouseClick()));
